etags and checksums

--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -3,17 +3,22 @@ image:
   file: .gitpod.Dockerfile
 
 tasks:
+  - name: aws-cli
+    env:
+      AWS_CLI_AUTO_PROMPT: on-partial
+    before: |
+      ./bin/aws_cli_install.sh
+
   - name: terraform
     before: |
-      wget -O - https://apt.releases.hashicorp.com/gpg | sudo gpg --dearmor -o /usr/share/keyrings/hashicorp-archive-keyring.gpg
-      echo "deb [arch=$(dpkg --print-architecture) signed-by=/usr/share/keyrings/hashicorp-archive-keyring.gpg] https://apt.releases.hashicorp.com $(lsb_release -cs) main" | sudo tee /etc/apt/sources.list.d/hashicorp.list
-      sudo apt update && sudo apt install terraform
+      ./bin/terraform_cli_install.sh
+  
   # random utilities
   - name: utils
     before: |
       sudp apt-get install tree
 
-  - name: cdk
+  - name: powershell
     before: |
-      npm i -g aws-cdk
+      ./bin/powershell_cli_install.sh
 
